--- a/pandas学习.ipynb
+++ b/pandas学习.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0ec95252",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "haha\n",
+      "123\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pandas\n"
+    "import pandas as pandas\n",
+    "print('haha')\n",
+    "print(\"123\")\n"
    ]
   }
  ],
@@ -18,7 +29,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
